--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,55 @@
-Flask==3.0.2
-numpy==1.24.4
 opencv_python_headless==4.9.0.80
+Flask==3.0.2
+tensorflow==2.4.1
+pixellib==0.7.1
+
+altgraph==0.17.4
+attrs==23.2.0
+blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+Flask==3.0.3
+flatbuffers==24.3.25
+humanfriendly==10.0
+idna==3.7
+imageio==2.34.2
+importlib_metadata==8.0.0
+importlib_resources==6.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+lazy_loader==0.4
+llvmlite==0.41.1
+macholib==1.16.3
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.1
+numba==0.58.1
+numpy==1.24.4
+onnxruntime==1.18.1
+opencv-python-headless==4.10.0.84
+packaging==24.1
+pillow==10.4.0
+pkgutil_resolve_name==1.3.10
+platformdirs==4.2.2
+pooch==1.8.2
+protobuf==5.27.2
+pyinstaller==6.8.0
+pyinstaller-hooks-contrib==2024.7
+PyMatting==1.1.12
+PyWavelets==1.4.1
+referencing==0.35.1
+rembg==2.0.57
+requests==2.32.3
+rpds-py==0.18.1
+scikit-image==0.21.0
+scipy==1.10.1
+sympy==1.12.1
+tifffile==2023.7.10
+tqdm==4.66.4
+urllib3==2.2.2
+Werkzeug==3.0.3
+zipp==3.19.2
